# skills-agent-distiller

./: ReadMe.md
.claude/: settings.local.json
Frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/api/: client.ts  rest.ts  sse.ts  types.ts  ws.ts
Frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageList.tsx  (+3 more)
Frontend/src/hooks/: useAutoGenerateStream.ts  useDistillStream.ts  useDistiller.ts  useExportDownload.ts  useHealth.ts  useSkills.ts  useWebSocket.ts
Frontend/src/pages/: ChatPage.tsx  DistillerPage.tsx  SkillsPage.tsx
Frontend/src/stores/: appStore.ts  chatStore.ts
Langchain-skills-distiller/: .env  Readme.md  project.md  pyproject.toml
Langchain-skills-distiller/.claude/: settings.local.json
Langchain-skills-distiller/.claude/skills/cui-ai-daily/: SKILL.md  report.html
Langchain-skills-distiller/.claude/skills/cui-ai-daily/scripts/: generate_report.py
Langchain-skills-distiller/.claude/skills/ppt-generation/: SKILL.md
Langchain-skills-distiller/src/langchain_skills/: __init__.py  agent.py  api_server.py  cli.py  skill_loader.py  tools.py  web_main.py
Langchain-skills-distiller/src/langchain_skills/distiller/: __init__.py  diff.py  engine.py  lint.py  prompts.py  samples.py  schemas.py  store.py  targets.py
Langchain-skills-distiller/src/langchain_skills/memory/: __init__.py  manager.py  persistent.py  session.py  store.py
Langchain-skills-distiller/src/langchain_skills/stream/: __init__.py  emitter.py  formatter.py  tracker.py  utils.py
(+24 files in other folders)
