[project]
name = "langchain-skills-distiller"
version = "0.2.0"
description = "LangChain Skills Agent with Skill Distiller fusion - Skills 三层加载 + 自动蒸馏生成 SKILL.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]

[project.scripts]
langchain-skills-distiller = "langchain_skills.cli:main"
langchain-skills-distiller-web = "langchain_skills.web_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_skills"]
